# Graffiti

./: .gitignore  Cargo.toml  Graffiti_Plan.md  README.md
.kiro/specs/graffiti-f1-telemetry-converter/: .config.kiro  design.md  requirements.md  tasks.md
src/: buffer.rs  channels.rs  lib.rs  listener.rs  main.rs  mapper.rs  session.rs  writer.rs
tests/: integration.rs
