[package]
name = "graffiti"
version = "0.1.0"
edition = "2021"
description = "F1 24 UDP telemetry to MoTeC i2 LD file converter"

[dependencies]
f1-game-packet-parser = "1"
motec-i2 = "0.2"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
